Production-ready: Security fixes, validation, type safety, and optimizations - All critical issues fixed, XSS vulnerabilities patched, comprehensive input validation added

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -2,6 +2,12 @@
   "hero": {
     "subtitle": "عشق",
     "tagline": "العيش ببطء أقرب إلى ما يهم حقًا",
+    "taglines": [
+      "العيش ببطء أقرب إلى ما يهم حقًا",
+      "احتضن جمال اللحظات الواعية",
+      "العيش بوعي، وليس بردود الفعل",
+      "توقف، تنفس، تواصل من جديد"
+    ],
     "cta": "ابدأ رحلتك"
   },
   "nav": {
@@ -10,7 +16,7 @@
     "party": "حزب",
     "boutique": "بوتيك",
     "association": "منظمة",
-    "photography": "التصوير والمونتاج",
+    "photography": "التصوير",
     "services": "خدمات",
     "housing": "السكن"
   },
